Optimize projection ingestion and async storage
Add incremental projection bulk loading, native page encodings, bounded dictionaries, and ClickBench evidence tooling. Harden async flush, TIL forwarding, HOT page ownership, cache accounting, and file-channel durability. Add shape-generic JSON/XML ingestion fast paths and extensive lifecycle, wire-format, failure-path, and cold-reopen coverage.